The keymap of the quit dialog is misaligned #75796

Closed
opened 2020-04-16 19:05:40 +02:00 by Bookyakuno · 3 comments

In Blender2.82, you can select the button with the shortcut keys 1, 2, 3.
However, in Blender2.83 beta, 1 key doesn't work and all the keymap are off by one.

This kind of key difference between versions is confusing.
This is a very dangerous problem for users who use keyed in the exit dialog from past versions, which can lead to unintended manipulation of files.

Keymap

Blender2.82

Keymap Behavior
1 Save
2 Don't Save
3 Cancel

↓ ↓ ↓

Blender2.83 beta

Keymap Behavior
1 None
2 Save
3 Don't Save
4 Cancel

In addition, shortcuts with initial letters such as the S and D keys will not work if the language setting is being translated.

Reproduction method

  1. File → Quit
  2. Display the dialog
  3. Press the 1, 2, or 3 keys.
  4. The behavior is different from Blender 2.82

System Info

version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 21:34, hash: f0221ff667, type: Release
build date: 2020-04-15, 21:04:39
platform: Windows
binary path: 'C:\Program Files\blender-2.83\blender.exe'
build cflags: /W3 /w34062 /w34115 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /wd4661 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /nologo /J /Gd /MP /bigobj -openmp
build cxxflags: /W3 /w34062 /w34115 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /wd4661 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /GR /EHsc /nologo /J /Gd /MP /EHsc /bigobj /permissive- /Zc:twoPhase- -openmp
build linkflags: /MACHINE:X64 /SUBSYSTEM:CONSOLE /STACK:2097152 /INCREMENTAL:NO /ignore:4049 /ignore:4217 /ignore:4221
build system: CMake

In Blender2.82, you can select the button with the shortcut keys 1, 2, 3. However, in Blender2.83 beta, **1 key doesn't work and all the keymap are off by one**. This kind of key difference between versions is confusing. This is a very dangerous problem for users who use keyed in the exit dialog from past versions, which can lead to unintended manipulation of files. ## Keymap ### Blender2.82 | Keymap | Behavior | | -- | -- | | 1 | Save | | 2 | Don't Save | | 3 | Cancel | ↓ ↓ ↓ ### Blender2.83 beta | Keymap | Behavior | | -- | -- | | 1 | **None** | | 2 | Save | | 3 | Don't Save | | 4 | Cancel | In addition, shortcuts with initial letters such as the S and D keys will not work if the language setting is being translated. ## Reproduction method 1. File → Quit 2. Display the dialog 3. Press the 1, 2, or 3 keys. 4. The behavior is different from Blender 2.82 ## System Info version: 2.83 (sub 13), branch: master, commit date: 2020-04-15 21:34, hash: f0221ff6674f, type: Release build date: 2020-04-15, 21:04:39 platform: Windows binary path: 'C:\\Program Files\\blender-2.83\\blender.exe' build cflags: /W3 /w34062 /w34115 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /wd4661 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /nologo /J /Gd /MP /bigobj -openmp build cxxflags: /W3 /w34062 /w34115 /w34189 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /wd4996 /wd4661 /we4013 /we4133 /we4431 /w35038 /DWIN32 /D_WINDOWS /W3 /GR /EHsc /nologo /J /Gd /MP /EHsc /bigobj /permissive- /Zc:twoPhase- -openmp build linkflags: /MACHINE:X64 /SUBSYSTEM:CONSOLE /STACK:2097152 /INCREMENTAL:NO /ignore:4049 /ignore:4217 /ignore:4221 build system: CMake
Author

Added subscriber: @Bookyakuno

Added subscriber: @Bookyakuno
Bookyakuno changed title from The keymap of the end dialog is misaligned to The keymap of the quit dialog is misaligned 2020-04-16 19:09:18 +02:00

This issue was referenced by 774b61189c

This issue was referenced by 774b61189c9f371770b9970eb7b42dd502007d65

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-17 10:13:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75796
No description provided.