Fix T75796: Misaligned quit dialog keymap